Correct positioning on carousel and make controls visible

--- a/src/less/style.less
+++ b/src/less/style.less
@@ -126,11 +126,20 @@ blockquote {
 }
 
 // Used in glossary.jade
+#ice-carousel.carousel.slide.pull-right {
+	width: 400px;
+	box-shadow: 5px 5px 5px silver;
+}
 .panel.panel-info.pull-right {
         width: 400px;
         margin-left: 40px;
         clear: right;
+	box-shadow: 5px 5px 5px silver;
 }
+
+h4.panel-title {
+		color: red;
+	}
 
 .carousel-caption {
 	background-color: #3E454C;
